correcting pointy border on IE

--- a/static/fredsez.css
+++ b/static/fredsez.css
@@ -31,7 +31,7 @@ body {
 }
 
 .fred-bottom .pointy-thing-left {
-    border: 0 solid;
+    border: 1px solid #ffffff;
     border-top-right-radius: 1em;
     background-color: #ffffff;
     height: 1em;
@@ -40,7 +40,7 @@ body {
 }
 
 .fred-bottom .pointy-thing-right {
-    border: 0 solid;
+    border: 1px solid #ffffff;
     border-top-left-radius: 1em;
     background-color: #ffffff;
     height: 1em;
@@ -66,7 +66,7 @@ body {
 }
 
 .other-bottom .pointy-thing-left {
-    border: 0 solid;
+    border: 1px solid #ffffff;
     border-top-right-radius: 1em;
     background-color: #ffffff;
     height: 1em;
@@ -75,7 +75,7 @@ body {
 }
 
 .other-bottom .pointy-thing-right {
-    border: 0 solid;
+    border: 1px solid #ffffff;
     border-top-left-radius: 1em;
     background-color: #ffffff;
     height: 1em;
@@ -101,7 +101,7 @@ body {
 }
 
 .me-bottom .pointy-thing-left {
-    border: 0 solid;
+    border: 1px solid #ffffff;
     border-top-right-radius: 1em;
     background-color: #ffffff;
     height: 1em;
@@ -110,7 +110,7 @@ body {
 }
 
 .me-bottom .pointy-thing-right {
-    border: 0 solid;
+    border: 1px solid #ffffff;
     border-top-left-radius: 1em;
     background-color: #ffffff;
     height: 1em;
